--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ cycler==0.10.0
 Cython==0.25.2
 decorator==4.0.10
 entrypoints==0.2.2
+et-xmlfile==1.0.1
 feather-format==0.3.1
 html5lib==0.9999999
 ipykernel==4.5.2
 ipython==5.1.0
 ipython-genutils==0.1.0
 ipywidgets==5.2.2
+jdcal==1.3
 Jinja2==2.8
 jsonschema==2.5.1
 jupyter==1.0.0
@@ -23,6 +25,7 @@ nbconvert==5.0.0
 nbformat==4.2.0
 notebook==4.3.1
 numpy==1.11.3
+openpyxl==2.4.1
 pandas==0.19.2
 pandocfilters==1.4.1
 pexpect==4.2.1
@@ -35,6 +38,7 @@ python-dateutil==2.6.0
 pytz==2016.10
 pyzmq==16.0.2
 qtconsole==4.2.1
+requests==2.12.4
 simplegeneric==0.8.1
 six==1.10.0
 terminado==0.6
